--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://935f251f-b7bb-4ae5-86c2-87b16a155bc0.preview.emergentagent.com
 WDS_SOCKET_PORT=443
